2008-07-02  Tim Waugh  <twaugh@redhat.com>

	* configure.in: Version 0.3.0 (stable).

2008-07-02  Tim Waugh  <twaugh@redhat.com>

	* src/filterdiff.c (clean_comments): New global.
	(filterdiff): Use it in determining whether to show non-diff
	lines.
	(syntax_str): Updated.
	(main): New option --clean.

	* doc/patchutils.xml: Updated.

	* tests/clean1/run-test: New test case.
	* Makefile.am (TESTS): Run it.

2008-07-02  Tim Waugh  <twaugh@redhat.com>

	* Makefile.am: Add TESTS and XFAIL_TESTS to EXTRA_DIST,
	instead of listing each test twice.

2008-06-11  Tim Waugh  <twaugh@redhat.com>

	* src/util.c (patlist_add_file): New function.
	* src/filterdiff.c (main): Use it, for new options -X and -I.
	(syntax_str): Updated.
	Original patch from Serj Kalichev.

	* doc/patchutils.xml: Updated.

	* tests/select2/run-test: Test -I (context format).
	* tests/select1/run-test: Test -I (unified format).
	* tests/select10/run-test: New test.  Test -x and -X for unified
	format.
	* tests/select11/run-test: New test.  Test -x and -X for context
	format.
	* Makefile.am (TESTS): Run new tests.

2008-06-11  Tim Waugh  <twaugh@redhat.com>

	* src/filterdiff.c (print_patchnames): Initial value is -1.
	(main): Initialise print_patchnames: if -H is allowed, and
	multiple input files are given, set it to 1; otherwise set it to
	0.

	* tests/lsdiff13/run-test: Verify that -H is the default when
	multiple files are given.

2005-08-10  Tim Waugh  <twaugh@redhat.com>

	* src/diff.c (best_name): Prevent use of uninitialised variable.

2005-07-22  Tim Waugh  <twaugh@redhat.com>

	* doc/patchutils.xml: Use referenceinfo for including author section.

2005-06-13  Tim Waugh  <twaugh@redhat.com>

	* configure.in: Version 0.2.31.

2005-05-11  Tim Waugh  <twaugh@redhat.com>

	* tests/delhunk6/run-test: New failing rediff test.
	* Makefile.am: Run it.

	* src/interdiff.c (construct_unline): Fixed compiler warning.

	* splitdiff.in: Applied Debian patch to prevent warnings from