@@ -1,3 +1,9 @@
+2008-07-28  Tim Waugh  <twaugh@redhat.com>
+
+	* src/interdiff.c (output_patch1_only): Clean up error messages.
+	(output_delta): Likewise.
+	Patch from Eli Carter.
+
 2008-07-02  Tim Waugh  <twaugh@redhat.com>
 
 	* configure.in: Version 0.3.0 (stable).
